--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -166,5 +166,188 @@
   "context_edit": "Editar Plantilla",
   "context_duplicate": "Duplicar Plantilla",
   "context_export": "Exportar Plantilla",
-  "context_delete": "Eliminar Plantilla"
+  "context_delete": "Eliminar Plantilla",
+
+  "_comment_pluralization": "=== SOPORTE DE PLURALIZACIÓN ===",
+  
+  "recipient_count_one": "{count} destinatario",
+  "recipient_count_other": "{count} destinatarios",
+  "template_count_one": "{count} plantilla",
+  "template_count_other": "{count} plantillas",
+  "message_count_one": "{count} mensaje",
+  "message_count_other": "{count} mensajes",
+  "error_count_one": "{count} error",
+  "error_count_other": "{count} errores",
+  "file_count_one": "{count} archivo",
+  "file_count_other": "{count} archivos",
+  "item_selected_one": "{count} elemento seleccionado",
+  "item_selected_other": "{count} elementos seleccionados",
+  
+  "_comment_context_aware": "=== TRADUCCIONES CONTEXTUALES ===",
+  
+  "button.save": "Guardar",
+  "button.cancel": "Cancelar",
+  "button.ok": "OK",
+  "button.close": "Cerrar",
+  "button.delete": "Eliminar",
+  "button.edit": "Editar",
+  "button.new": "Nuevo",
+  "button.import": "Importar",
+  "button.export": "Exportar",
+  "button.send": "Enviar",
+  "button.test": "Probar",
+  "button.preview": "Vista Previa",
+  
+  "menu.file": "Archivo",
+  "menu.edit": "Editar",
+  "menu.view": "Ver",
+  "menu.tools": "Herramientas",
+  "menu.help": "Ayuda",
+  "menu.templates": "Plantillas",
+  "menu.settings": "Configuraciones",
+  "menu.language": "Idioma",
+  
+  "dialog.title": "CSC-Reach",
+  "dialog.confirm": "Confirmar",
+  "dialog.warning": "Advertencia",
+  "dialog.error": "Error",
+  "dialog.information": "Información",
+  
+  "status.ready": "Listo",
+  "status.not_ready": "No Listo",
+  "status.loading": "Cargando...",
+  "status.saving": "Guardando...",
+  "status.sending": "Enviando...",
+  "status.complete": "Completo",
+  "status.failed": "Falló",
+  "status.cancelled": "Cancelado",
+  
+  "_comment_formatting": "=== FORMATO ESPECÍFICO DE REGIÓN ===",
+  
+  "date_format": "dd/MM/yyyy",
+  "time_format": "HH:mm:ss",
+  "datetime_format": "dd/MM/yyyy HH:mm:ss",
+  "number_decimal_separator": ",",
+  "number_thousands_separator": ".",
+  "currency_symbol": "€",
+  "currency_position": "after",
+  "phone_format": "+34 ### ### ###",
+  "address_format": "{street}\n{zip} {city}, {state}\n{country}",
+
+  "_comment_additional_ui": "=== TRADUCCIONES ADICIONALES DE UI ===",
+  
+  "language_settings": "Configuración de Idioma",
+  "language_settings_title": "Configuración de Idioma",
+  "language_changed_restart": "Idioma cambiado. Algunos cambios pueden requerir reiniciar la aplicación.",
+  "language_detection_failed": "Error al detectar el idioma del sistema. Usando inglés como predeterminado.",
+  
+  "csv_import": "Importar CSV",
+  "csv_import_title": "Importar Archivo CSV",
+  "csv_file_selected": "Archivo CSV seleccionado: {filename}",
+  "csv_processing": "Procesando archivo CSV...",
+  "csv_processed_success": "Se procesaron exitosamente {count} registros",
+  "csv_processing_failed": "Error al procesar archivo CSV: {error}",
+  "csv_encoding_detected": "Codificación detectada: {encoding}",
+  "csv_columns_mapped": "Columnas mapeadas exitosamente",
+  "csv_validation_errors": "Errores de validación encontrados: {count}",
+  
+  "email_service": "Servicio de Email",
+  "email_service_status": "Estado del Servicio de Email",
+  "email_outlook_detected": "Microsoft Outlook detectado",
+  "email_outlook_not_found": "Microsoft Outlook no encontrado",
+  "email_sending_progress": "Enviando emails... {current}/{total}",
+  "email_sending_complete": "Envío de emails completo. Enviados: {sent}, Fallidos: {failed}",
+  "email_draft_created": "Borradores de email creados en Outlook",
+  
+  "whatsapp_service": "Servicio de WhatsApp",
+  "whatsapp_service_status": "Estado del Servicio de WhatsApp",
+  "whatsapp_api_configured": "WhatsApp Business API configurado",
+  "whatsapp_api_not_configured": "WhatsApp Business API no configurado",
+  "whatsapp_web_configured": "WhatsApp Web configurado",
+  "whatsapp_web_not_configured": "WhatsApp Web no configurado",
+  "whatsapp_sending_progress": "Enviando mensajes de WhatsApp... {current}/{total}",
+  "whatsapp_sending_complete": "Envío de WhatsApp completo. Enviados: {sent}, Fallidos: {failed}",
+  "whatsapp_rate_limit_reached": "Límite de velocidad de WhatsApp alcanzado. Esperando...",
+  "whatsapp_daily_limit_reached": "Límite diario de WhatsApp alcanzado",
+  
+  "progress_dialog": "Progreso",
+  "progress_dialog_title": "Progreso de la Operación",
+  "progress_preparing": "Preparando...",
+  "progress_processing": "Procesando...",
+  "progress_completing": "Completando...",
+  "progress_cancelled": "Operación cancelada",
+  "progress_cancel_confirm": "¿Está seguro de que desea cancelar esta operación?",
+  
+  "validation_errors": "Errores de Validación",
+  "validation_email_invalid": "Dirección de email inválida: {email}",
+  "validation_phone_invalid": "Número de teléfono inválido: {phone}",
+  "validation_name_required": "El nombre es obligatorio",
+  "validation_company_required": "La empresa es obligatoria",
+  "validation_field_empty": "El campo '{field}' no puede estar vacío",
+  "validation_field_too_long": "El campo '{field}' es demasiado largo (máx {max} caracteres)",
+  
+  "error_dialog": "Error",
+  "error_dialog_title": "Ocurrió un Error",
+  "error_unexpected": "Ocurrió un error inesperado",
+  "error_network": "Ocurrió un error de red",
+  "error_file_not_found": "Archivo no encontrado: {filename}",
+  "error_permission_denied": "Permiso denegado",
+  "error_disk_full": "Espacio en disco lleno",
+  "error_invalid_format": "Formato de archivo inválido",
+  
+  "success_dialog": "Éxito",
+  "success_dialog_title": "Operación Exitosa",
+  "success_operation_complete": "Operación completada exitosamente",
+  "success_file_saved": "Archivo guardado exitosamente: {filename}",
+  "success_settings_saved": "Configuraciones guardadas exitosamente",
+  
+  "warning_dialog": "Advertencia",
+  "warning_dialog_title": "Advertencia",
+  "warning_unsaved_changes": "Tiene cambios sin guardar. ¿Desea guardarlos?",
+  "warning_large_dataset": "Conjunto de datos grande detectado. Esta operación puede tomar tiempo.",
+  "warning_quota_exceeded": "Cuota excedida. Algunos mensajes pueden no enviarse.",
+  
+  "about_dialog": "Acerca de CSC-Reach",
+  "about_title": "Acerca de",
+  "about_version": "Versión: {version}",
+  "about_description": "Plataforma de comunicación multi-canal para empresas",
+  "about_copyright": "© 2024 CSC-Reach. Todos los derechos reservados.",
+  "about_website": "Sitio web: https://csc-reach.com",
+  
+  "help_dialog": "Ayuda",
+  "help_title": "Ayuda y Soporte",
+  "help_user_manual": "Manual de Usuario",
+  "help_keyboard_shortcuts": "Atajos de Teclado",
+  "help_troubleshooting": "Solución de Problemas",
+  "help_contact_support": "Contactar Soporte",
+  
+  "keyboard_shortcuts": "Atajos de Teclado",
+  "shortcut_new": "Ctrl+N - Nueva Plantilla",
+  "shortcut_open": "Ctrl+O - Importar CSV",
+  "shortcut_save": "Ctrl+S - Guardar Plantilla",
+  "shortcut_send": "Ctrl+Enter - Enviar Mensajes",
+  "shortcut_preview": "Ctrl+P - Vista Previa del Mensaje",
+  "shortcut_settings": "Ctrl+, - Configuraciones",
+  "shortcut_help": "F1 - Ayuda",
+  "shortcut_quit": "Ctrl+Q - Salir de la Aplicación",
+
+  "_comment_time_duration": "=== TRADUCCIONES DE TIEMPO Y DURACIÓN ===",
+  
+  "second_one": "{count} segundo",
+  "second_other": "{count} segundos",
+  "minute_one": "{count} minuto",
+  "minute_other": "{count} minutos",
+  "hour_one": "{count} hora",
+  "hour_other": "{count} horas",
+  "day_one": "{count} día",
+  "day_other": "{count} días",
+  
+  "relative_time_now": "ahora",
+  "relative_time_just_now": "hace un momento",
+  "relative_time_in_minutes": "en {count} minutos",
+  "relative_time_minutes_ago": "hace {count} minutos",
+  "relative_time_in_hours": "en {count} horas",
+  "relative_time_hours_ago": "hace {count} horas",
+  "relative_time_in_days": "en {count} días",
+  "relative_time_days_ago": "hace {count} días"
 }
