--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -166,5 +166,188 @@
   "context_edit": "Editar Modelo",
   "context_duplicate": "Duplicar Modelo",
   "context_export": "Exportar Modelo",
-  "context_delete": "Excluir Modelo"
+  "context_delete": "Excluir Modelo",
+
+  "_comment_pluralization": "=== SUPORTE À PLURALIZAÇÃO ===",
+  
+  "recipient_count_one": "{count} destinatário",
+  "recipient_count_other": "{count} destinatários",
+  "template_count_one": "{count} modelo",
+  "template_count_other": "{count} modelos",
+  "message_count_one": "{count} mensagem",
+  "message_count_other": "{count} mensagens",
+  "error_count_one": "{count} erro",
+  "error_count_other": "{count} erros",
+  "file_count_one": "{count} arquivo",
+  "file_count_other": "{count} arquivos",
+  "item_selected_one": "{count} item selecionado",
+  "item_selected_other": "{count} itens selecionados",
+  
+  "_comment_context_aware": "=== TRADUÇÕES CONTEXTUAIS ===",
+  
+  "button.save": "Salvar",
+  "button.cancel": "Cancelar",
+  "button.ok": "OK",
+  "button.close": "Fechar",
+  "button.delete": "Excluir",
+  "button.edit": "Editar",
+  "button.new": "Novo",
+  "button.import": "Importar",
+  "button.export": "Exportar",
+  "button.send": "Enviar",
+  "button.test": "Testar",
+  "button.preview": "Visualizar",
+  
+  "menu.file": "Arquivo",
+  "menu.edit": "Editar",
+  "menu.view": "Visualizar",
+  "menu.tools": "Ferramentas",
+  "menu.help": "Ajuda",
+  "menu.templates": "Modelos",
+  "menu.settings": "Configurações",
+  "menu.language": "Idioma",
+  
+  "dialog.title": "CSC-Reach",
+  "dialog.confirm": "Confirmar",
+  "dialog.warning": "Aviso",
+  "dialog.error": "Erro",
+  "dialog.information": "Informação",
+  
+  "status.ready": "Pronto",
+  "status.not_ready": "Não Pronto",
+  "status.loading": "Carregando...",
+  "status.saving": "Salvando...",
+  "status.sending": "Enviando...",
+  "status.complete": "Completo",
+  "status.failed": "Falhou",
+  "status.cancelled": "Cancelado",
+  
+  "_comment_formatting": "=== FORMATAÇÃO ESPECÍFICA DA REGIÃO ===",
+  
+  "date_format": "dd/MM/yyyy",
+  "time_format": "HH:mm:ss",
+  "datetime_format": "dd/MM/yyyy HH:mm:ss",
+  "number_decimal_separator": ",",
+  "number_thousands_separator": ".",
+  "currency_symbol": "R$",
+  "currency_position": "before",
+  "phone_format": "+55 (##) #####-####",
+  "address_format": "{street}\n{city} - {state}\n{zip}\n{country}",
+
+  "_comment_additional_ui": "=== TRADUÇÕES ADICIONAIS DE UI ===",
+  
+  "language_settings": "Configurações de Idioma",
+  "language_settings_title": "Configurações de Idioma",
+  "language_changed_restart": "Idioma alterado. Algumas mudanças podem exigir reiniciar a aplicação.",
+  "language_detection_failed": "Falha ao detectar idioma do sistema. Usando inglês como padrão.",
+  
+  "csv_import": "Importar CSV",
+  "csv_import_title": "Importar Arquivo CSV",
+  "csv_file_selected": "Arquivo CSV selecionado: {filename}",
+  "csv_processing": "Processando arquivo CSV...",
+  "csv_processed_success": "Processados com sucesso {count} registros",
+  "csv_processing_failed": "Falha ao processar arquivo CSV: {error}",
+  "csv_encoding_detected": "Codificação detectada: {encoding}",
+  "csv_columns_mapped": "Colunas mapeadas com sucesso",
+  "csv_validation_errors": "Erros de validação encontrados: {count}",
+  
+  "email_service": "Serviço de Email",
+  "email_service_status": "Status do Serviço de Email",
+  "email_outlook_detected": "Microsoft Outlook detectado",
+  "email_outlook_not_found": "Microsoft Outlook não encontrado",
+  "email_sending_progress": "Enviando emails... {current}/{total}",
+  "email_sending_complete": "Envio de emails completo. Enviados: {sent}, Falharam: {failed}",
+  "email_draft_created": "Rascunhos de email criados no Outlook",
+  
+  "whatsapp_service": "Serviço do WhatsApp",
+  "whatsapp_service_status": "Status do Serviço do WhatsApp",
+  "whatsapp_api_configured": "WhatsApp Business API configurado",
+  "whatsapp_api_not_configured": "WhatsApp Business API não configurado",
+  "whatsapp_web_configured": "WhatsApp Web configurado",
+  "whatsapp_web_not_configured": "WhatsApp Web não configurado",
+  "whatsapp_sending_progress": "Enviando mensagens do WhatsApp... {current}/{total}",
+  "whatsapp_sending_complete": "Envio do WhatsApp completo. Enviados: {sent}, Falharam: {failed}",
+  "whatsapp_rate_limit_reached": "Limite de velocidade do WhatsApp atingido. Aguardando...",
+  "whatsapp_daily_limit_reached": "Limite diário do WhatsApp atingido",
+  
+  "progress_dialog": "Progresso",
+  "progress_dialog_title": "Progresso da Operação",
+  "progress_preparing": "Preparando...",
+  "progress_processing": "Processando...",
+  "progress_completing": "Completando...",
+  "progress_cancelled": "Operação cancelada",
+  "progress_cancel_confirm": "Tem certeza de que deseja cancelar esta operação?",
+  
+  "validation_errors": "Erros de Validação",
+  "validation_email_invalid": "Endereço de email inválido: {email}",
+  "validation_phone_invalid": "Número de telefone inválido: {phone}",
+  "validation_name_required": "Nome é obrigatório",
+  "validation_company_required": "Empresa é obrigatória",
+  "validation_field_empty": "Campo '{field}' não pode estar vazio",
+  "validation_field_too_long": "Campo '{field}' é muito longo (máx {max} caracteres)",
+  
+  "error_dialog": "Erro",
+  "error_dialog_title": "Ocorreu um Erro",
+  "error_unexpected": "Ocorreu um erro inesperado",
+  "error_network": "Ocorreu um erro de rede",
+  "error_file_not_found": "Arquivo não encontrado: {filename}",
+  "error_permission_denied": "Permissão negada",
+  "error_disk_full": "Espaço em disco cheio",
+  "error_invalid_format": "Formato de arquivo inválido",
+  
+  "success_dialog": "Sucesso",
+  "success_dialog_title": "Operação Bem-sucedida",
+  "success_operation_complete": "Operação completada com sucesso",
+  "success_file_saved": "Arquivo salvo com sucesso: {filename}",
+  "success_settings_saved": "Configurações salvas com sucesso",
+  
+  "warning_dialog": "Aviso",
+  "warning_dialog_title": "Aviso",
+  "warning_unsaved_changes": "Você tem alterações não salvas. Deseja salvá-las?",
+  "warning_large_dataset": "Conjunto de dados grande detectado. Esta operação pode demorar.",
+  "warning_quota_exceeded": "Cota excedida. Algumas mensagens podem não ser enviadas.",
+  
+  "about_dialog": "Sobre o CSC-Reach",
+  "about_title": "Sobre",
+  "about_version": "Versão: {version}",
+  "about_description": "Plataforma de comunicação multi-canal para empresas",
+  "about_copyright": "© 2024 CSC-Reach. Todos os direitos reservados.",
+  "about_website": "Site: https://csc-reach.com",
+  
+  "help_dialog": "Ajuda",
+  "help_title": "Ajuda e Suporte",
+  "help_user_manual": "Manual do Usuário",
+  "help_keyboard_shortcuts": "Atalhos de Teclado",
+  "help_troubleshooting": "Solução de Problemas",
+  "help_contact_support": "Contatar Suporte",
+  
+  "keyboard_shortcuts": "Atalhos de Teclado",
+  "shortcut_new": "Ctrl+N - Novo Modelo",
+  "shortcut_open": "Ctrl+O - Importar CSV",
+  "shortcut_save": "Ctrl+S - Salvar Modelo",
+  "shortcut_send": "Ctrl+Enter - Enviar Mensagens",
+  "shortcut_preview": "Ctrl+P - Visualizar Mensagem",
+  "shortcut_settings": "Ctrl+, - Configurações",
+  "shortcut_help": "F1 - Ajuda",
+  "shortcut_quit": "Ctrl+Q - Sair da Aplicação",
+
+  "_comment_time_duration": "=== TRADUÇÕES DE TEMPO E DURAÇÃO ===",
+  
+  "second_one": "{count} segundo",
+  "second_other": "{count} segundos",
+  "minute_one": "{count} minuto",
+  "minute_other": "{count} minutos",
+  "hour_one": "{count} hora",
+  "hour_other": "{count} horas",
+  "day_one": "{count} dia",
+  "day_other": "{count} dias",
+  
+  "relative_time_now": "agora",
+  "relative_time_just_now": "agora mesmo",
+  "relative_time_in_minutes": "em {count} minutos",
+  "relative_time_minutes_ago": "{count} minutos atrás",
+  "relative_time_in_hours": "em {count} horas",
+  "relative_time_hours_ago": "{count} horas atrás",
+  "relative_time_in_days": "em {count} dias",
+  "relative_time_days_ago": "{count} dias atrás"
 }
